--- a/3-kaggle-lanl-earthquake-prediction.html
+++ b/3-kaggle-lanl-earthquake-prediction.html
@@ -83,9 +83,17 @@
 <h3 id="33-直播答疑">3.3 直播答疑</h3>
 
 <video width=80%  controls >
-	<source type="video/mp4" src="3-kaggle-lanl-earthquake-prediction/3-2.mp4" />
+	<source type="video/mp4" src="3-kaggle-lanl-earthquake-prediction/3-2-1.mp4" />
 </video>
 
+<video width=80%  controls >
+	<source type="video/mp4" src="3-kaggle-lanl-earthquake-prediction/3-2-2.mp4" />
+</video>
+	    
+<video width=80%  controls >
+	<source type="video/mp4" src="3-kaggle-lanl-earthquake-prediction/3-2-3.mp4" />
+</video>
+	    
 <p><strong>直播内容：</strong>直播答疑（第五周<strong>Kaggle：地震预测</strong>内容相关的问题）</p>
 
 
